objects/tspa__VRAPermissionCheck__mdt.object
<CustomObject>
    <fields>
        <fullName>tspa__Class_Name__c</fullName>
        <label>Class Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Required_Access__c</fullName>
        <label>Required Access</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>VRAPermissionCheck</label>
    <pluralLabel>VRAPermissionChecks</pluralLabel>
</CustomObject>